--- a/UCMainForBasicandAdditionalSettings/UCMainSettingsUMTS.csproj
+++ b/UCMainForBasicandAdditionalSettings/UCMainSettingsUMTS.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{B6498D0C-A4CE-4E82-A7EA-955DC5ED42A3}</ProjectGuid>
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UCMainForBasicandAdditionalSettings</RootNamespace>
-    <AssemblyName>UCMainForBasicandAdditionalSettings</AssemblyName>
+    <RootNamespace>UCMainSettingsUMTS</RootNamespace>
+    <AssemblyName>UCMainSettingsUMTS</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -32,11 +32,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DevExpress.Data.v15.1, Version=15.1.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Mvvm.v15.1, Version=15.1.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Printing.v15.1.Core, Version=15.1.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Xpf.Core.v15.1, Version=15.1.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="LocalizationBasicAndAdditionalSettings">
       <HintPath>..\LocalizationBasicAndAdditionalSettings\bin\Debug\LocalizationBasicAndAdditionalSettings.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -52,6 +61,8 @@
     <Reference Include="UCBasicSettings">
       <HintPath>..\UCBasicSettings\bin\Debug\UCBasicSettings.dll</HintPath>
     </Reference>
+    <Reference Include="UIAutomationProvider" />
+    <Reference Include="UIAutomationTypes" />
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -61,7 +72,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Compile Include="VMUCMainForBasicandAdditionalSettings.cs" />
+    <Compile Include="OptionsUMTSInfo.cs" />
+    <Compile Include="VMUCMainSettingsUMTS.cs" />
     <Compile Include="UCMainForBasicandAdditionalSettings.xaml.cs">
       <DependentUpon>UCMainForBasicandAdditionalSettings.xaml</DependentUpon>
       <SubType>Code</SubType>
