--- a/UCMainForBasicandAdditionalSettings/UCMainSettingsUMTS.csproj
+++ b/UCMainForBasicandAdditionalSettings/UCMainSettingsUMTS.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommonClassLibraryForSolutionNetwork">
+      <HintPath>..\..\CommonClassLibraryForSolutionNetwork\CommonClassLibraryForSolutionNetwork\bin\Debug\CommonClassLibraryForSolutionNetwork.dll</HintPath>
+    </Reference>
     <Reference Include="DevExpress.Data.v15.1, Version=15.1.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Mvvm.v15.1, Version=15.1.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Printing.v15.1.Core, Version=15.1.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
